--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 *.file_extension filter=lfs diff=lfs merge=lfs -text
-Packages/*.tgz filter=lfs diff=lfs merge=lfs -text
+*.tgz filter=lfs diff=lfs merge=lfs -text
 *.unitypackage filter=lfs diff=lfs merge=lfs -text
+Packages/*.tgz filter=lfs diff=lfs merge=lfs -text
 *.apk filter=lfs diff=lfs merge=lfs -text
