--- a/.gitattributes
+++ b/.gitattributes
@@ -13,6 +13,9 @@
 *.asset merge=unityyamlmerge eol=lf
 *.meta merge=unityyamlmerge eol=lf
 *.controller merge=unityyamlmerge eol=lf
+##  tgz and unitypackage ##
+add-vuforia-package-10-12-3.unitypackage merge=unityyamlmerge eol=lf
+Packages/com.ptc.vuforia.engine-10.12.3.tgz
 ## git-lfs ##
 #Image
 *.jpg filter=lfs diff=lfs merge=lfs -text
